--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <figure><img src="images/daphne.jpg"><figcaption>Daphne in the rose garden.</figcaption></figure>
         <figure><img src="images/naomi.jpg"><figcaption>Naomi at Amy's Wedding.</figcaption></figure>
         <figure><img src="images/bekka.jpg"><figcaption>Rebekah celebrating her 40th birthday.</figcaption></figure>
+	<figure><img src="images/deborah.jpg"><figcaption>Debbie and husband at out-eat.</figcaption></figure>	
     </div>
 	
 </body>
