--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <figure><img src="images/daphne.jpg"><figcaption>Daphne in the rose garden.</figcaption></figure>
         <figure><img src="images/naomi.jpg"><figcaption>Naomi at Amy's Wedding.</figcaption></figure>
         <figure><img src="images/bekka.jpg"><figcaption>Rebekah celebrating her 40th birthday.</figcaption></figure>
-	<figure><img src="images/deborah.jpg"><figcaption>Debbie and husband at out-eat.</figcaption></figure>	
+	<figure><img src="images/deborah.jpg"><figcaption>Debbie and husband at out-eat.</figcaption></figure>
+	<figure><img src="images/ruth.jpg"><figcaption>Ruth unmasked.</figcaption></figure>
+		
     </div>
 	
 </body>
